# cyber-vault

./: .gitignore  ANCHOR_BUG_REPORT.md  ANCHOR_FIX_PR.md  Anchor.toml  Cargo.toml  DEPLOYMENT.md  INSTRUCTION_REVIEW.md  README.md  SMART_CONTRACT.md  demo.js  package-lock.json  package.json
anchor/: Anchor.toml  codama.js
anchor/programs/cybervault/: Cargo.toml
anchor/programs/cybervault/src/: lib.rs
anchor/src/: cybervault-exports.ts  index.ts
anchor/tests/: cybervault.test.ts
cyber-vault-frontend/: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json  package.json
cyber-vault-frontend/assets/: tailwind.css
cyber-vault-frontend/src/: input.css  main.rs  vault_operations.rs  wallet.rs
cyber-vault-frontend/src/components/: create_vault_form.rs  header.rs  mod.rs  token_selector.rs  vault_list.rs  wallet_connector.rs
cyber-vault-frontend/src/components/ui/: loading_overlay.rs  loading_spinner.rs  mod.rs  notification_card.rs  status_badge.rs
docs/: ANCHOR_VERSION_ANALYSIS.md  DOCUMENTATION_STRUCTURE.md
programs/cyber-vault-rs/: Cargo.toml
programs/cyber-vault-rs/src/: error.rs  lib.rs
programs/cyber-vault-rs/src/instructions/: claim.rs  create_vault.rs  emergency_withdraw.rs  heartbeat.rs  mod.rs
programs/cyber-vault-rs/src/state/: vault.rs
scripts/: submit-anchor-fix.sh
src/: app-routes.tsx  app.tsx
src/components/: app-header.tsx
src/components/ui/: separator.tsx
src/features/cybervault/: cybervault-feature.tsx
src/features/cybervault/data-access/: index.ts  use-cybervault-mutations.ts  use-cybervault-queries.ts  use-get-program-account-query.ts  use-greet-mutation.ts  use-token-selection.ts
src/features/cybervault/ui/: cybervault-ui-create.tsx  cybervault-ui-program-explorer-link.tsx  cybervault-ui-program.tsx
tests/: cyber-vault-litesvm-tests.rs  emergency_withdraw_tests.rs
