[workspace]
[package]
name = "cyber-vault-frontend"
version = "0.1.0"
authors = ["ozoneRatchapon <ratchapon.poc@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["web"] }
solana-sdk = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
bincode = "1.3"
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", features = ["wasmbind"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
